update on some enpoint documentation
